--- a/vc-web/vc-web-front/pom.xml
+++ b/vc-web/vc-web-front/pom.xml
@@ -22,8 +22,18 @@
             <version>${frm.version}</version>
         </dependency>
         <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-biz-phoenix-inf</artifactId>
+            <version>${biz.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>www.ccclubs</groupId>
+            <artifactId>vc-frm-core</artifactId>
+            <version>${frm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -34,6 +44,14 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
         </dependency>
     </dependencies>
     <build>
