--- a/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
+++ b/vc-web/vc-web-cfg/src/main/resources/bootstrap.yml
@@ -12,8 +12,8 @@ spring:
           #是否暴露加解密接口
           enabled: true
         git:
-          uri: file://E:/WorkSpace/JavaSpace/vc
-          searchPaths:  vc-env/env/
+          uri: http://120.26.220.241/BurningGroup/vc.git
+          searchPaths:  vc-env/env
           username: zhangkejiang
           password: ss123456
           #取分支 默认master
